# aoc-2022

./: .env.example  .gitignore  README.md  newDay.sh
.template/src/: lib.rs
1/src/: lib.rs
10/src/: lib.rs
11/src/: lib.rs
12/src/: lib.rs
13/src/: lib.rs
14/src/: lib.rs
15/: Cargo.toml
15/src/: lib.rs
2/src/: lib.rs
3/src/: lib.rs
4/src/: lib.rs
5/src/: lib.rs
6/: Cargo.toml
6/src/: lib.rs
7/src/: lib.rs
8/src/: lib.rs  main.rs
9/src/: lib.rs
